Fix bug where editing ticket description would cause a shift of elements in the ticket-detailed-view component

--- a/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
+++ b/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
@@ -11,23 +11,23 @@
 }
 
 .ticket-detailed-view {
-  position: fixed;
-  top: 40%;
-  left: 50%; 
-  transform: translate(-50%, -50%); 
+  position: relative;
   margin: 40px auto;
   background-color: $neutral-darker;
-  width: 80%;
-  max-width: 800px;
-  border-radius: 8px;
+  width: 50vw;
+  min-height : 30rem;
+  max-width: 50rem;
+  max-height : 50rem;
+  border-radius: 0.5rem;
   overflow: hidden;
-  color : $secondary;
-  min-height : 50vh;
+  color: $secondary;
+  margin-top : 15vh;
 }
 
 .header-stripe {
   position: relative;
-  height: 4rem;
+  height: 5rem;
+  margin-bottom : 0.3rem;
 }
 
 .close-button {
@@ -59,8 +59,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom : -0.3rem;
 }
+
+$text-field-offset : 0.3rem;
 
 .ticket-name-input {
   width: 100%;
@@ -71,8 +72,8 @@
   color: $secondary;
   cursor: pointer;
   padding: 0.1rem;
-  padding-left : 0.3rem;
-  margin-left : -0.3rem;
+  padding-left : $text-field-offset;
+  margin-left : -$text-field-offset;
   line-height: 1.2;
   border: 1px solid transparent;
   box-sizing: border-box;
@@ -85,8 +86,8 @@
   &.editing {
     background-color: $background-lighter;
     padding: 0.1rem;
-    padding-left : 0.3rem;
-    margin-left : -0.3rem;
+    padding-left : $text-field-offset;
+    margin-left : -$text-field-offset;
     border: 1px solid $secondary;
     box-sizing: border-box;
     cursor: text;
@@ -97,35 +98,65 @@
 .subheading {
   font-size: 1rem;
   font-weight : 300;
+  margin-bottom : 2rem;
 }
 
 .list-name-subheading {
   font-weight : 500;
 }
 
-.description-section h3 {
-  margin-top: 24px;
+.description-header {
+  font-size : 1rem;
+  font-weight : 550;
+  letter-spacing: 0.05rem;
+  margin-bottom : 0.2rem;
 }
-
-.description-section p {
-  cursor: pointer;
-  white-space: pre-wrap;
-}
-
 .description-section textarea {
   width: 100%;
-  height: 100px;
-  resize: vertical;
+  height: 6rem;
+  max-height: 20rem;
+  overflow-y: auto;
+  border: none;
+  background-color: transparent;
+  color: $secondary;
+  cursor: pointer;
+  resize: none;
+  padding: 0.1rem;
+  padding-left : $text-field-offset;
+  margin-left : -$text-field-offset;
+  line-height: 1.4;
+  border: 1px solid transparent;
+  box-sizing: border-box;
+  border-radius: $text-input-border-radius;
+  white-space: pre-wrap;
+
+  &:read-only {
+    cursor: pointer;
+  }
+
+  &.editing {
+    background-color: $background-lighter;
+    border: 1px solid $secondary;
+    cursor: text;
+  }
+
+  &::placeholder {
+    color: rgb(255 255 255 / 55%);
+    //color: $placeholder;
+  }
 }
 
 .description-buttons {
   margin-top: 8px;
+  //visibility : hidden;
+  
 }
 
 .description-buttons .save-button,
 .description-buttons .cancel-button {
   margin-right: 8px;
 }
+
 
 .action-button {
   width: 100%;
